add header section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
             </div>
         </div>
     </nav>
+    <header>
+        <div class="wrap">
+            <h1>Creative digital solutions</h1>
+            <p>Possimus molestiae architecto pariatur delectus eligendi?</p>
+            <button class="btn">View Portfolio</button>
+        </div>
+    </header>
 </body>
 
 </html>
