add section features

--- a/index.html
+++ b/index.html
@@ -36,6 +36,25 @@
             <button class="btn">View Portfolio</button>
         </div>
     </header>
+    <section class="features">
+        <h1>Professional services</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <div class="feature">
+            <h1><i class="far fa-heart"></i></h1>
+            <h2>Beautiful Designs</h2>
+            <p>Ad rem perferendis quia porro, distinctio dolore non.</p>
+        </div>
+        <div class="feature">
+            <h1><i class="fas fa-mobile-alt"></i></h1>
+            <h2>Responsive web</h2>
+            <p>Corrupti sed omnis aliquid ut eveniet. Mollitia vel odit.</p>
+        </div>
+        <div class="feature">
+            <h1><i class="fas fa-chart-line"></i></h1>
+            <h2>Marketing tools</h2>
+            <p>Eveniet ratione recusandae ut debitis.</p>
+        </div>
+    </section>
 </body>
 
 </html>
