add section about

--- a/index.html
+++ b/index.html
@@ -55,6 +55,27 @@
             <p>Eveniet ratione recusandae ut debitis.</p>
         </div>
     </section>
+    <section class="about">
+        <div class="fasIcon"><i class="fas fa-cog"></i></div>
+        <div class="wrapper">
+            <div>
+                <h1>Just relax <span>&</span> let us do the heavy lifting</h1>
+                <p>
+                    Fuga unde consequuntur sed quis! Architecto nulla, autem nesciunt
+                    non in perspiciatis explicabo voluptas!
+                </p>
+                <div class="list">
+                    <i class="far fa-check-circle"></i>
+                    <p>Initial Setup <span>&</span> Customization</p>
+                    <i class="far fa-check-circle"></i>
+                    <p>Regular Updates</p>
+                    <i class="far fa-check-circle"></i>
+                    <p>Round the clock Support</p>
+                </div>
+                <button class="btn">learn more</button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
