add section portfolio

--- a/index.html
+++ b/index.html
@@ -76,6 +76,44 @@
             </div>
         </div>
     </section>
+    <section class="portfolio">
+        <div class="description">
+            <h1>Latest project</h1>
+            <p>
+                Molestiae architecto pariatur delectus eligendi veritatis voluptates.
+            </p>
+            <h2>Developing a framework</h2>
+            <p>
+                Proin iaculis purus consequat sem cure digni ssim donec porttitora
+                entum suscipit aenean rhoncus posuere odio in tincidunt.
+            </p>
+        </div>
+        <div class="tech">
+            <div class="icon"><i class="fas fa-shopping-basket"></i></div>
+            <div>
+                <h1>E-Commerce Ready</h1>
+                <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
+            </div>
+            <div class="icon"><i class="fas fa-laptop-code"></i></div>
+            <div>
+                <h1>Powerful SEO Features</h1>
+                <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
+            </div>
+            <div class="icon"><i class="fas fa-lock"></i></div>
+            <div>
+                <h1>Secure Encyptrion</h1>
+                <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
+            </div>
+            <p>
+                Odit a ullam molestias maiores totam assumenda laboriosam ducimus
+                vero! Illum.
+            </p>
+            <a href="">view details <i class="fas fa-long-arrow-alt-right"></i></a>
+            <div>
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
