add section attribute

--- a/index.html
+++ b/index.html
@@ -114,6 +114,41 @@
             </div>
         </div>
     </section>
+    <section class="attribute">
+        <div>
+            <h1>Culture & Values</h1>
+            <p>
+                Tenetur sed quo consequuntur cum illum illo dolor reiciendis provident
+                nam.
+            </p>
+        </div>
+        <div>
+            <i class="fab fa-itunes-note"></i>
+            <h2>Work-Life Balance</h2>
+            <p>
+                Amet hic maiores voluptatibus culpa in labore quas iusto, nisi
+                corrupti ex? Ea, unde? Quae, quia.
+            </p>
+        </div>
+
+        <div>
+            <i class="fas fa-award"></i>
+            <h2>Quality over Quality</h2>
+            <p>
+                Epsum unde repellat eaque assumenda ut alias ducimus reiciendis,
+                deleniti libero.
+            </p>
+        </div>
+
+        <div>
+            <i class="far fa-star"></i>
+            <h2>Deliver exellence</h2>
+            <p>
+                Dolorem pariatur consequuntur tempora ex officiis. Consectetur
+                pariatura alias!
+            </p>
+        </div>
+    </section>
 </body>
 
 </html>
