add section clients

--- a/index.html
+++ b/index.html
@@ -149,6 +149,36 @@
             </p>
         </div>
     </section>
+    <section class="clients">
+        <div>
+            <h1>Our awsesome clients</h1>
+            <p>Sunt magni impedit cumque recusandae obcaecati laudantium.</p>
+        </div>
+
+        <div>
+            <img src="" alt="" />
+        </div>
+
+        <div>
+            <p>
+                "Assumenda a sit. Consequuntur, quia amet optio nisi commodi, laborum
+                ad qui culpa illum modi, voluptas nam."
+            </p>
+            <p>Julia Richardson, Founder of echo media</p>
+        </div>
+
+        <div>
+            <img src="" alt="" />
+        </div>
+
+        <div>
+            <p>
+                "Quasi libero iure placeat voluptatibus numquam, praesentium inventore
+                at tenetur omnis vero minima esse!"
+            </p>
+            <p>Jack Smith, CEO of Artmani</p>
+        </div>
+    </section>
 </body>
 
 </html>
