add section next project

--- a/index.html
+++ b/index.html
@@ -179,6 +179,18 @@
             <p>Jack Smith, CEO of Artmani</p>
         </div>
     </section>
+    <section class="next-project">
+        <div>
+            <h1>Ready to talk about your next project?</h1>
+            <button><a href="#">contact us</a></button>
+        </div>
+        <div>
+            <div><img src="" alt="" /></div>
+            <div><img src="" alt="" /></div>
+            <div><img src="" alt="" /></div>
+            <div><img src="" alt="" /></div>
+        </div>
+    </section>
 </body>
 
 </html>
