--- a/index.html
+++ b/index.html
@@ -191,6 +191,51 @@
             <div><img src="" alt="" /></div>
         </div>
     </section>
+    <section class="contact">
+        <div>
+            <h1>Contact us</h1>
+            <i class="fas fa-map-marker-alt"></i>
+            <p>55 Main St. Toronto, ON M1H 3A5</p>
+            <i class="fas fa-mobile-alt"></i>
+            <p>(321) 152 321 85</p>
+            <i class="far fa-envelope"></i>
+            <p>info@greenhouse.com</p>
+        </div>
+        <div>
+            <h1>Latest posts</h1>
+            <i class="far fa-newspaper"></i>
+            <p>Made with love in Toronto</p>
+            <i class="far fa-newspaper"></i>
+            <p>Startup news & tech</p>
+            <i class="far fa-image"></i>
+            <p>Bitcoin will soon rule the world</p>
+            <i class="far fa-newspaper"></i>
+            <p>Wearable technology</p>
+            <i class="fab fa-youtube"></i>
+            <p>Learn web desin in 30 days!</p>
+        </div>
+        <div>
+            <h1>Latest tweets</h1>
+            <i class="fab fa-twitter-square"></i>
+            <div>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad
+                    reprehenderit minus error iste iusto sunt eligendi aut, dicta odit
+                    tenetur!
+                </p>
+                <p>#famousquotes</p>
+            </div>
+            <i class="fab fa-twitter-square"></i>
+            <div>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad
+                    reprehenderit minus error iste iusto sunt eligendi aut, dicta odit
+                    tenetur!
+                </p>
+                <p>#freebies #templates</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
