--- a/index.html
+++ b/index.html
@@ -236,6 +236,19 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footerBar">
+            <div>
+                <p><i class="far fa-copyright"></i>Copyright</p>
+            </div>
+            <div>
+                <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.pinterest.com"><i class="fab fa-pinterest-p"></i></a>
+                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                <a href="https://plus.google.com/"><i class="fab fa-google-plus"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
