add img  folder and update html file

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </p>
             <a href="">view details <i class="fas fa-long-arrow-alt-right"></i></a>
             <div>
-                <img src="" alt="">
+                <img src="img/tablet.png" alt="tablet">
             </div>
         </div>
     </section>
@@ -156,7 +156,7 @@
         </div>
 
         <div>
-            <img src="" alt="" />
+            <img src="img/Julia_Richardson.jpg" alt="client picture Julia Richardson" />
         </div>
 
         <div>
@@ -168,7 +168,7 @@
         </div>
 
         <div>
-            <img src="" alt="" />
+            <img src="img/Jack_Smith.jpg" alt="client picture Jack Smith" />
         </div>
 
         <div>
@@ -185,10 +185,10 @@
             <button><a href="#">contact us</a></button>
         </div>
         <div>
-            <div><img src="" alt="" /></div>
-            <div><img src="" alt="" /></div>
-            <div><img src="" alt="" /></div>
-            <div><img src="" alt="" /></div>
+            <div><img src="img/clients-logo_aetuts.jpg" alt="aetuts logo" /></div>
+            <div><img src="img/clients-logo_envato.jpg" alt="envato logo" /></div>
+            <div><img src="img/clients-logo_microlanser.jpg" alt="microlanser logo" /></div>
+            <div><img src="img/clients-logo_wordpress.jpg" alt="wordpress logo" /></div>
         </div>
     </section>
     <section class="contact">
