add style file and styles to navbar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Treehouse</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/73665279c0.js" crossorigin="anonymous"></script>
 </head>
 
@@ -13,20 +14,21 @@
     <nav>
         <div class="navbar">
             <div class="logo">
-                <a href="#"><i class="fas fa-leaf"></i>Greenhouse</a>
+                <span class="fas fa-leaf" data-icon="logo" aria-hidden="true"></span>
+                <a href="#">Greenhouse</a>
             </div>
             <div class="burger">
-                <i class="fas fa-bars"></i>
+                <span class="fas fa-bars" data-icon="burger" aria-hidden="true"></span>
             </div>
-            <div class="menu">
-                <ul>
-                    <li><a class="homeNav" href="#">Home</a></li>
-                    <li><a class="aboutNav" href="#">About</a></li>
-                    <li><a class="portfolioNav" href="#">Portfolio</a></li>
-                    <li><a class="blogNav" href="#">Blog</a></li>
-                    <li><a class="contactNav" href="#">Contact</a></li>
-                </ul>
-            </div>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a class="homeNav" href="#">Home</a></li>
+                <li><a class="aboutNav" href="#">About</a></li>
+                <li><a class="portfolioNav" href="#">Portfolio</a></li>
+                <li><a class="blogNav" href="#">Blog</a></li>
+                <li><a class="contactNav" href="#">Contact</a></li>
+            </ul>
         </div>
     </nav>
     <header>
@@ -110,7 +112,7 @@
             </p>
             <a href="">view details <i class="fas fa-long-arrow-alt-right"></i></a>
             <div>
-                <img src="img/tablet.png" alt="tablet">
+                <!-- <img src="img/tablet.png" alt="tablet"> -->
             </div>
         </div>
     </section>
@@ -156,7 +158,7 @@
         </div>
 
         <div>
-            <img src="img/Julia_Richardson.jpg" alt="client picture Julia Richardson" />
+            <!-- <img src="img/Julia_Richardson.jpg" alt="client picture Julia Richardson" /> -->
         </div>
 
         <div>
@@ -168,7 +170,7 @@
         </div>
 
         <div>
-            <img src="img/Jack_Smith.jpg" alt="client picture Jack Smith" />
+            <!-- <img src="img/Jack_Smith.jpg" alt="client picture Jack Smith" /> -->
         </div>
 
         <div>
