--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
         </div>
     </section>
     <section class="about">
-        <div class="fasIcon"><i class="fas fa-cog"></i></div>
+        <span class="fas fa-cog" data-icon="gear" aria-hidden="true"></span>
         <div class="wrapper">
-            <div>
+            <div class="bgopacity">
                 <h1>Just relax <span>&</span> let us do the heavy lifting</h1>
                 <p>
                     Fuga unde consequuntur sed quis! Architecto nulla, autem nesciunt
                     non in perspiciatis explicabo voluptas!
                 </p>
                 <div class="list">
-                    <i class="far fa-check-circle"></i>
-                    <p>Initial Setup <span>&</span> Customization</p>
-                    <i class="far fa-check-circle"></i>
+                    <span class="far fa-check-circle" data-icon="chech circle" aria-hidden="true"></span>
+                    <p>Initial Setup and Customization</p>
+                    <span class="far fa-check-circle" data-icon="chech circle" aria-hidden="true"></span>
                     <p>Regular Updates</p>
-                    <i class="far fa-check-circle"></i>
+                    <span class="far fa-check-circle" data-icon="chech circle" aria-hidden="true"></span>
                     <p>Round the clock Support</p>
                 </div>
                 <button class="btn">learn more</button>
