add styles to section portfolio

--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@
             </p>
         </div>
         <div class="tech">
-            <div class="icon"><i class="fas fa-shopping-basket"></i></div>
-            <div>
+            <div><span class="fas fa-shopping-basket" data-icon="basket" aria-hidden="true"></span></div>
+            <div class="spec">
                 <h1>E-Commerce Ready</h1>
                 <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
             </div>
-            <div class="icon"><i class="fas fa-laptop-code"></i></div>
-            <div>
+            <div><span class="fas fa-laptop-code" data-icon="laptop" aria-hidden="true"></span></div>
+            <div class="spec">
                 <h1>Powerful SEO Features</h1>
                 <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
             </div>
-            <div class="icon"><i class="fas fa-lock"></i></div>
-            <div>
+            <div><span class="fas fa-lock" data-icon="lock" aria-hidden="true"></span></div>
+            <div class="spec">
                 <h1>Secure Encyptrion</h1>
                 <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
             </div>
@@ -111,9 +111,9 @@
                 vero! Illum.
             </p>
             <a href="">view details <i class="fas fa-long-arrow-alt-right"></i></a>
-            <div>
-                <!-- <img src="img/tablet.png" alt="tablet"> -->
-            </div>
+        </div>
+        <div class="techImage">
+            <img src="img/tablet.png" alt="tablet">
         </div>
     </section>
     <section class="attribute">
