add styles to section attribute

--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
         </div>
     </section>
     <section class="attribute">
-        <div>
+        <div class="attr-des">
             <h1>Culture & Values</h1>
             <p>
                 Tenetur sed quo consequuntur cum illum illo dolor reiciendis provident
                 nam.
             </p>
         </div>
-        <div>
-            <i class="fab fa-itunes-note"></i>
+        <div class="attr">
+            <span class="fab fa-itunes-note" data-icon="note" aria-hidden="true"></span>
             <h2>Work-Life Balance</h2>
             <p>
                 Amet hic maiores voluptatibus culpa in labore quas iusto, nisi
@@ -133,8 +133,8 @@
             </p>
         </div>
 
-        <div>
-            <i class="fas fa-award"></i>
+        <div class="attr">
+            <span class="fas fa-award" data-icon="award" aria-hidden="true"></span>
             <h2>Quality over Quality</h2>
             <p>
                 Epsum unde repellat eaque assumenda ut alias ducimus reiciendis,
@@ -142,8 +142,8 @@
             </p>
         </div>
 
-        <div>
-            <i class="far fa-star"></i>
+        <div class="attr">
+            <span class="far fa-star" data-icon="star" aria-hidden="true"></span>
             <h2>Deliver exellence</h2>
             <p>
                 Dolorem pariatur consequuntur tempora ex officiis. Consectetur
