add styles to clients section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
                 corrupti ex? Ea, unde? Quae, quia.
             </p>
         </div>
-
         <div class="attr">
             <span class="fas fa-award" data-icon="award" aria-hidden="true"></span>
             <h2>Quality over Quality</h2>
@@ -141,7 +140,6 @@
                 deleniti libero.
             </p>
         </div>
-
         <div class="attr">
             <span class="far fa-star" data-icon="star" aria-hidden="true"></span>
             <h2>Deliver exellence</h2>
@@ -152,28 +150,24 @@
         </div>
     </section>
     <section class="clients">
-        <div>
+        <div class="heading">
             <h1>Our awsesome clients</h1>
             <p>Sunt magni impedit cumque recusandae obcaecati laudantium.</p>
         </div>
-
-        <div>
-            <!-- <img src="img/Julia_Richardson.jpg" alt="client picture Julia Richardson" /> -->
+        <div class="customerFoto">
+            <img src="img/Julia_Richardson.jpg" alt="client picture Julia Richardson" />
         </div>
-
-        <div>
+        <div class="customer">
             <p>
                 "Assumenda a sit. Consequuntur, quia amet optio nisi commodi, laborum
                 ad qui culpa illum modi, voluptas nam."
             </p>
             <p>Julia Richardson, Founder of echo media</p>
         </div>
-
-        <div>
-            <!-- <img src="img/Jack_Smith.jpg" alt="client picture Jack Smith" /> -->
+        <div class="customerFoto">
+            <img src="img/Jack_Smith.jpg" alt="client picture Jack Smith" />
         </div>
-
-        <div>
+        <div class="customer">
             <p>
                 "Quasi libero iure placeat voluptatibus numquam, praesentium inventore
                 at tenetur omnis vero minima esse!"
