add styles to next-project section

--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
         </div>
     </section>
     <section class="next-project">
-        <div>
+        <div class="heading next">
             <h1>Ready to talk about your next project?</h1>
             <button><a href="#">contact us</a></button>
         </div>
-        <div>
+        <div class="logo-next">
             <div><img src="img/clients-logo_aetuts.jpg" alt="aetuts logo" /></div>
             <div><img src="img/clients-logo_envato.jpg" alt="envato logo" /></div>
             <div><img src="img/clients-logo_microlanser.jpg" alt="microlanser logo" /></div>
