add styles to section contact

--- a/index.html
+++ b/index.html
@@ -188,31 +188,32 @@
         </div>
     </section>
     <section class="contact">
-        <div>
+        <div class="adress">
             <h1>Contact us</h1>
-            <i class="fas fa-map-marker-alt"></i>
+            <span class="fas fa-map-marker-alt" data-icon="marker" aria-hidden="true"></span>
             <p>55 Main St. Toronto, ON M1H 3A5</p>
-            <i class="fas fa-mobile-alt"></i>
+            <span class="fas fa-mobile-alt" data-icon="mobile" aria-hidden="true"></span>
             <p>(321) 152 321 85</p>
-            <i class="far fa-envelope"></i>
+            <span class="far fa-envelope" data-icon="envelope" aria-hidden="true"></span>
             <p>info@greenhouse.com</p>
         </div>
-        <div>
+        <div class="activities">
             <h1>Latest posts</h1>
-            <i class="far fa-newspaper"></i>
+            <span class="far fa-newspaper" data-icon="newspaper" aria-hidden="true"></span>
             <p>Made with love in Toronto</p>
-            <i class="far fa-newspaper"></i>
+            <span class="far fa-newspaper" data-icon="newspaper" aria-hidden="true"></span>
             <p>Startup news & tech</p>
-            <i class="far fa-image"></i>
+            <span class="far fa-image" data-icon="image" aria-hidden="true"></span>
             <p>Bitcoin will soon rule the world</p>
-            <i class="far fa-newspaper"></i>
+            <span class="far fa-newspaper" data-icon="newspaper" aria-hidden="true"></span>
             <p>Wearable technology</p>
-            <i class="fab fa-youtube"></i>
+            <span class="fab fa-youtube" data-icon="youtube" aria-hidden="true"></span>
             <p>Learn web desin in 30 days!</p>
         </div>
-        <div>
+        <div class="lastTweets">
             <h1>Latest tweets</h1>
-            <i class="fab fa-twitter-square"></i>
+            <!-- <i class="fab fa-twitter-square"></i> -->
+            <span class="fab fa-twitter-square" data-icon="square" aria-hidden="true"></span>
             <div>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad
@@ -221,7 +222,8 @@
                 </p>
                 <p>#famousquotes</p>
             </div>
-            <i class="fab fa-twitter-square"></i>
+            <!-- <i class="fab fa-twitter-square"></i> -->
+            <span class="fab fa-twitter-square" data-icon="square" aria-hidden="true"></span>
             <div>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad
