add styles to footer

--- a/index.html
+++ b/index.html
@@ -236,14 +236,18 @@
     </section>
     <footer>
         <div class="footerBar">
-            <div>
+            <div class="copyright">
                 <p><i class="far fa-copyright"></i>Copyright</p>
             </div>
-            <div>
-                <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.pinterest.com"><i class="fab fa-pinterest-p"></i></a>
-                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                <a href="https://plus.google.com/"><i class="fab fa-google-plus"></i></a>
+            <div class="socials">
+                <a href="https://www.facebook.com"> <span class="fab fa-facebook" data-icon="facebook icon"
+                        aria-hidden="true"></span></a>
+                <a href="https://www.pinterest.com"><span class="fab fa-pinterest-p" data-icon="pinterest icon"
+                        aria-hidden="true"></span></a>
+                <a href="https://twitter.com/"><span class="fab fa-twitter" data-icon="twitter icon"
+                        aria-hidden="true"></span></a>
+                <a href="https://plus.google.com/">
+                    <span class="fab fa-google-plus" data-icon="square" aria-hidden="google icon"></span></a>
             </div>
         </div>
     </footer>
