change the logo name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navbar">
             <div class="logo">
                 <span class="fas fa-leaf" data-icon="logo" aria-hidden="true"></span>
-                <a href="#">Greenhouse</a>
+                <a href="#">Treehouse</a>
             </div>
             <div class="burger">
                 <span class="fas fa-bars" data-icon="burger" aria-hidden="true"></span>
