add main.js file

--- a/index.html
+++ b/index.html
@@ -212,7 +212,6 @@
         </div>
         <div class="lastTweets">
             <h1>Latest tweets</h1>
-            <!-- <i class="fab fa-twitter-square"></i> -->
             <span class="fab fa-twitter-square" data-icon="square" aria-hidden="true"></span>
             <div>
                 <p>
@@ -222,7 +221,6 @@
                 </p>
                 <p>#famousquotes</p>
             </div>
-            <!-- <i class="fab fa-twitter-square"></i> -->
             <span class="fab fa-twitter-square" data-icon="square" aria-hidden="true"></span>
             <div>
                 <p>
@@ -251,6 +249,7 @@
             </div>
         </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
