add styles to menu and scroll  behavior after click

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a class="homeNav" href="#">Home</a></li>
-                <li><a class="aboutNav" href="#">About</a></li>
-                <li><a class="portfolioNav" href="#">Portfolio</a></li>
-                <li><a class="blogNav" href="#">Blog</a></li>
-                <li><a class="contactNav" href="#">Contact</a></li>
+                <li><a class="homeNav" href="#headerScroll">Home</a></li>
+                <li><a class="aboutNav" href="#aboutScroll">About</a></li>
+                <li><a class="portfolioNav" href="#portfolioScroll">Portfolio</a></li>
+                <li><a class="blogNav" href="#clientsScroll">Blog</a></li>
+                <li><a class="contactNav" href="#contactScroll">Contact</a></li>
             </ul>
         </div>
     </nav>
-    <header>
+    <header id="headerScroll">
         <div class="wrap">
             <h1>Creative digital solutions</h1>
             <p>Possimus molestiae architecto pariatur delectus eligendi?</p>
@@ -57,7 +57,7 @@
             <p>Eveniet ratione recusandae ut debitis.</p>
         </div>
     </section>
-    <section class="about">
+    <section id="aboutScroll" class="about">
         <span class="fas fa-cog" data-icon="gear" aria-hidden="true"></span>
         <div class="wrapper">
             <div class="bgopacity">
@@ -78,7 +78,7 @@
             </div>
         </div>
     </section>
-    <section class="portfolio">
+    <section id="portfolioScroll" class="portfolio">
         <div class="description">
             <h1>Latest project</h1>
             <p>
@@ -149,7 +149,7 @@
             </p>
         </div>
     </section>
-    <section class="clients">
+    <section id="clientsScroll" class="clients">
         <div class="heading">
             <h1>Our awsesome clients</h1>
             <p>Sunt magni impedit cumque recusandae obcaecati laudantium.</p>
@@ -187,7 +187,7 @@
             <div><img src="img/clients-logo_wordpress.jpg" alt="wordpress logo" /></div>
         </div>
     </section>
-    <section class="contact">
+    <section id="contactScroll" class="contact">
         <div class="adress">
             <h1>Contact us</h1>
             <span class="fas fa-map-marker-alt" data-icon="marker" aria-hidden="true"></span>
