add direct call to html and check mobile display resolutions

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <section class="next-project">
         <div class="heading next">
             <h1>Ready to talk about your next project?</h1>
-            <button><a href="#">contact us</a></button>
+            <button><a href="tel:(321) 152 321 85">contact us</a></button>
         </div>
         <div class="logo-next">
             <div><img src="img/clients-logo_aetuts.jpg" alt="aetuts logo" /></div>
@@ -193,9 +193,9 @@
             <span class="fas fa-map-marker-alt" data-icon="marker" aria-hidden="true"></span>
             <p>55 Main St. Toronto, ON M1H 3A5</p>
             <span class="fas fa-mobile-alt" data-icon="mobile" aria-hidden="true"></span>
-            <p>(321) 152 321 85</p>
+            <p><a href="tel:(321) 152 321 85">(321) 152 321 85</a></p>
             <span class="far fa-envelope" data-icon="envelope" aria-hidden="true"></span>
-            <p>info@greenhouse.com</p>
+            <p>info@treehouse.com</p>
         </div>
         <div class="activities">
             <h1>Latest posts</h1>
