add style to next project section media (min-width: 768px) and (orientation: portrait)

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
     </section>
     <section class="next-project">
-        <div class="heading next">
+        <div class="next">
             <h1>Ready to talk about your next project?</h1>
             <button><a href="tel:(321) 152 321 85">contact us</a></button>
         </div>
