update styles for 1024 and landscape to nav, header, attributes, about section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </section>
     <section id="aboutScroll" class="about">
-        <span class="fas fa-cog" data-icon="gear" aria-hidden="true"></span>
+        <div class="icon"><span class="fas fa-cog" data-icon="gear" aria-hidden="true"></span></div>
         <div class="wrapper">
             <div class="bgopacity">
                 <h1>Just relax <span>&</span> let us do the heavy lifting</h1>
@@ -91,17 +91,18 @@
             </p>
         </div>
         <div class="tech">
-            <div><span class="fas fa-shopping-basket" data-icon="basket" aria-hidden="true"></span></div>
+            <div class="techIcon"><span class="fas fa-shopping-basket" data-icon="basket" aria-hidden="true"></span>
+            </div>
             <div class="spec">
                 <h1>E-Commerce Ready</h1>
                 <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
             </div>
-            <div><span class="fas fa-laptop-code" data-icon="laptop" aria-hidden="true"></span></div>
+            <div class="techIcon"><span class="fas fa-laptop-code" data-icon="laptop" aria-hidden="true"></span></div>
             <div class="spec">
                 <h1>Powerful SEO Features</h1>
                 <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
             </div>
-            <div><span class="fas fa-lock" data-icon="lock" aria-hidden="true"></span></div>
+            <div class="techIcon"><span class="fas fa-lock" data-icon="lock" aria-hidden="true"></span></div>
             <div class="spec">
                 <h1>Secure Encyptrion</h1>
                 <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
