update last project styles for 1024 and landscape

--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
                 <h1>Secure Encyptrion</h1>
                 <p>Autem nesciunt non in perspiciatis explicabo voluptas.</p>
             </div>
-            <p>
+            <p class="info">
                 Odit a ullam molestias maiores totam assumenda laboriosam ducimus
                 vero! Illum.
             </p>
             <a href="">view details <i class="fas fa-long-arrow-alt-right"></i></a>
+            <div class="imageWrapper">
+                <img src="img/tablet.png" alt="tablet"></div>
         </div>
-        <div class="techImage">
-            <img src="img/tablet.png" alt="tablet">
-        </div>
+
     </section>
     <section class="attribute">
         <div class="attr-des">
